add discount style for tablet view

--- a/index.html
+++ b/index.html
@@ -317,7 +317,10 @@
       </div>
       <div class="grid-container">
         <div class="sub-news flex">
-          <img src="images/deals-1.jpg" alt="Glasses">
+          <div class="img-wrapper">
+            <img src="images/deals-1.jpg" alt="Glasses">
+            <p class="discount">97% OFF</p>
+          </div>
           <div class="wrapper flex">
             <a href="#"><h4>The Ultimate 2021 White Hat Hacker Certification Bundle</h4></a>
             <ul class="flex">
@@ -327,7 +330,10 @@
           </div>
         </div>
         <div class="sub-news flex">
-          <img src="images/deals-2.jpg" alt="Premium Bundle">
+          <div class="img-wrapper">            
+            <img src="images/deals-2.jpg" alt="Premium Bundle">
+            <p class="discount">99% OFF</p>
+          </div>
           <div class="wrapper flex">
             <a href="#"><h4>The Premium 2021 Project & Quality Management Certification Bundle </h4></a>
             <ul class="flex">
@@ -337,7 +343,10 @@
           </div>  
         </div>
         <div class="sub-news flex">
-          <img src="images/deals-3.jpg" alt="Pro Google SEO">
+          <div class="img-wrapper">            
+            <img src="images/deals-3.jpg" alt="Pro Google SEO">
+            <p class="discount">99% OFF</p>
+          </div>
           <div class="wrapper flex">
             <a href="#"><h4>The Pro Google SEO & SERP Certification Bundle</h4></a>
           <ul class="flex">
@@ -347,7 +356,10 @@
           </div>  
         </div>
         <div class="sub-news flex">
-          <img src="images/deals-4.jpg" alt="Microsoft Azure">
+          <div class="img-wrapper">            
+            <img src="images/deals-4.jpg" alt="Microsoft Azure">
+            <p class="discount">98% OFF</p>
+          </div>
           <div class="wrapper flex">
             <a href="#"><h4>The Complete 2021 Microsoft Azure Certification Prep Bundle</h4></a>
             <ul class="flex">
@@ -357,7 +369,10 @@
           </div> 
         </div>
         <div class="sub-news flex">
-          <img src="images/deals-5.jpg" alt="IPVanish">
+          <div class="img-wrapper">            
+            <img src="images/deals-5.jpg" alt="IPVanish">
+            <p class="discount">80% OFF</p>
+          </div>
           <div class="wrapper flex">
             <a href="#"><h4>IPVanish VPN: 1-Yr Subscription</h4></a>
             <ul class="flex">
@@ -367,7 +382,10 @@
           </div> 
         </div>
         <div class="sub-news flex">
-          <img src="images/deals-6.jpg" alt="X Music">
+          <div class="img-wrapper">            
+            <img src="images/deals-6.jpg" alt="X Music">
+            <p class="discount">96% OFF</p>
+          </div>
           <div class="wrapper flex">
             <a href="#"><h4>The Ultimate Logic Pro X Music Production Bundle</h4></a>
             <ul class="flex">
@@ -377,7 +395,10 @@
           </div> 
         </div>
         <div class="sub-news flex">
-          <img src="images/deals-7.jpg" alt="Azure certification">
+          <div class="img-wrapper">            
+            <img src="images/deals-7.jpg" alt="Azure certification">
+            <p class="discount">97% OFF</p>
+          </div>
           <div class="wrapper flex">
             <a href="#"><h4>The 2021 Complete Microsoft Azure Certification Prep Bundle </h4></a>
             <ul class="flex">
@@ -387,7 +408,10 @@
           </div> 
         </div>
         <div class="sub-news flex">
-          <img src="images/deals-8.jpg" alt="Familio">
+          <div class="img-wrapper">            
+            <img src="images/deals-8.jpg" alt="Familio">
+            <p class="discount">87% OFF</p>
+          </div>
           <div class="wrapper flex">
             <a href="#"><h4>Familio Private Backup Platform: Lifetime Subscription</h4></a>
             <ul class="flex">
