fix style for discount

--- a/index.html
+++ b/index.html
@@ -318,8 +318,11 @@
       <div class="grid-container">
         <div class="sub-news flex">
           <div class="img-wrapper">
+            <div class="triangle">
+              <p class="discount">97% OFF</p>
+            </div>
             <img src="images/deals-1.jpg" alt="Glasses">
-            <p class="discount">97% OFF</p>
+            
           </div>
           <div class="wrapper flex">
             <a href="#"><h4>The Ultimate 2021 White Hat Hacker Certification Bundle</h4></a>
