--- a/index.html
+++ b/index.html
@@ -333,9 +333,11 @@
           </div>
         </div>
         <div class="sub-news flex">
-          <div class="img-wrapper">            
+          <div class="img-wrapper"> 
+            <div class="triangle">
+              <p class="discount">99% OFF</p>
+            </div>           
             <img src="images/deals-2.jpg" alt="Premium Bundle">
-            <p class="discount">99% OFF</p>
           </div>
           <div class="wrapper flex">
             <a href="#"><h4>The Premium 2021 Project & Quality Management Certification Bundle </h4></a>
@@ -346,9 +348,11 @@
           </div>  
         </div>
         <div class="sub-news flex">
-          <div class="img-wrapper">            
+          <div class="img-wrapper">
+            <div class="triangle">
+              <p class="discount">99% OFF</p>
+            </div>       
             <img src="images/deals-3.jpg" alt="Pro Google SEO">
-            <p class="discount">99% OFF</p>
           </div>
           <div class="wrapper flex">
             <a href="#"><h4>The Pro Google SEO & SERP Certification Bundle</h4></a>
@@ -359,9 +363,11 @@
           </div>  
         </div>
         <div class="sub-news flex">
-          <div class="img-wrapper">            
+          <div class="img-wrapper">  
+            <div class="triangle">
+              <p class="discount">98% OFF</p>
+            </div>              
             <img src="images/deals-4.jpg" alt="Microsoft Azure">
-            <p class="discount">98% OFF</p>
           </div>
           <div class="wrapper flex">
             <a href="#"><h4>The Complete 2021 Microsoft Azure Certification Prep Bundle</h4></a>
@@ -372,9 +378,11 @@
           </div> 
         </div>
         <div class="sub-news flex">
-          <div class="img-wrapper">            
+          <div class="img-wrapper"> 
+            <div class="triangle">
+              <p class="discount">80% OFF</p>
+            </div>               
             <img src="images/deals-5.jpg" alt="IPVanish">
-            <p class="discount">80% OFF</p>
           </div>
           <div class="wrapper flex">
             <a href="#"><h4>IPVanish VPN: 1-Yr Subscription</h4></a>
@@ -385,9 +393,11 @@
           </div> 
         </div>
         <div class="sub-news flex">
-          <div class="img-wrapper">            
+          <div class="img-wrapper">     
+            <div class="triangle">
+              <p class="discount">96% OFF</p>
+            </div>           
             <img src="images/deals-6.jpg" alt="X Music">
-            <p class="discount">96% OFF</p>
           </div>
           <div class="wrapper flex">
             <a href="#"><h4>The Ultimate Logic Pro X Music Production Bundle</h4></a>
@@ -398,9 +408,11 @@
           </div> 
         </div>
         <div class="sub-news flex">
-          <div class="img-wrapper">            
+          <div class="img-wrapper"> 
+            <div class="triangle">
+              <p class="discount">97% OFF</p>
+            </div>               
             <img src="images/deals-7.jpg" alt="Azure certification">
-            <p class="discount">97% OFF</p>
           </div>
           <div class="wrapper flex">
             <a href="#"><h4>The 2021 Complete Microsoft Azure Certification Prep Bundle </h4></a>
@@ -411,9 +423,11 @@
           </div> 
         </div>
         <div class="sub-news flex">
-          <div class="img-wrapper">            
+          <div class="img-wrapper">   
+            <div class="triangle">
+              <p class="discount">87% OFF</p>
+            </div>             
             <img src="images/deals-8.jpg" alt="Familio">
-            <p class="discount">87% OFF</p>
           </div>
           <div class="wrapper flex">
             <a href="#"><h4>Familio Private Backup Platform: Lifetime Subscription</h4></a>
