fix yellow discount tag

--- a/index.html
+++ b/index.html
@@ -319,8 +319,11 @@
         <div class="grid-container">
           <div class="sub-news flex">
             <div class="img-wrapper">
+              <div class="triangle">
+                <p class="discount">97% OFF</p>
+              </div>
               <img src="images/deals-1.jpg" alt="Glasses">
-              <p class="discount">97% OFF</p>
+              
             </div>
             <div class="wrapper flex">
               <a href="#"><h4>The Ultimate 2021 White Hat Hacker Certification Bundle</h4></a>
@@ -331,9 +334,11 @@
             </div>
           </div>
           <div class="sub-news flex">
-            <div class="img-wrapper">            
+            <div class="img-wrapper"> 
+              <div class="triangle">
+                <p class="discount">99% OFF</p>
+              </div>           
               <img src="images/deals-2.jpg" alt="Premium Bundle">
-              <p class="discount">99% OFF</p>
             </div>
             <div class="wrapper flex">
               <a href="#"><h4>The Premium 2021 Project & Quality Management Certification Bundle </h4></a>
@@ -344,9 +349,11 @@
             </div>  
           </div>
           <div class="sub-news flex">
-            <div class="img-wrapper">            
+            <div class="img-wrapper">
+              <div class="triangle">
+                <p class="discount">99% OFF</p>
+              </div>       
               <img src="images/deals-3.jpg" alt="Pro Google SEO">
-              <p class="discount">99% OFF</p>
             </div>
             <div class="wrapper flex">
               <a href="#"><h4>The Pro Google SEO & SERP Certification Bundle</h4></a>
@@ -357,9 +364,11 @@
             </div>  
           </div>
           <div class="sub-news flex">
-            <div class="img-wrapper">            
+            <div class="img-wrapper">  
+              <div class="triangle">
+                <p class="discount">98% OFF</p>
+              </div>              
               <img src="images/deals-4.jpg" alt="Microsoft Azure">
-              <p class="discount">98% OFF</p>
             </div>
             <div class="wrapper flex">
               <a href="#"><h4>The Complete 2021 Microsoft Azure Certification Prep Bundle</h4></a>
@@ -370,9 +379,11 @@
             </div> 
           </div>
           <div class="sub-news flex">
-            <div class="img-wrapper">            
+            <div class="img-wrapper"> 
+              <div class="triangle">
+                <p class="discount">80% OFF</p>
+              </div>               
               <img src="images/deals-5.jpg" alt="IPVanish">
-              <p class="discount">80% OFF</p>
             </div>
             <div class="wrapper flex">
               <a href="#"><h4>IPVanish VPN: 1-Yr Subscription</h4></a>
@@ -383,9 +394,11 @@
             </div> 
           </div>
           <div class="sub-news flex">
-            <div class="img-wrapper">            
+            <div class="img-wrapper">     
+              <div class="triangle">
+                <p class="discount">96% OFF</p>
+              </div>           
               <img src="images/deals-6.jpg" alt="X Music">
-              <p class="discount">96% OFF</p>
             </div>
             <div class="wrapper flex">
               <a href="#"><h4>The Ultimate Logic Pro X Music Production Bundle</h4></a>
@@ -396,9 +409,11 @@
             </div> 
           </div>
           <div class="sub-news flex">
-            <div class="img-wrapper">            
+            <div class="img-wrapper"> 
+              <div class="triangle">
+                <p class="discount">97% OFF</p>
+              </div>               
               <img src="images/deals-7.jpg" alt="Azure certification">
-              <p class="discount">97% OFF</p>
             </div>
             <div class="wrapper flex">
               <a href="#"><h4>The 2021 Complete Microsoft Azure Certification Prep Bundle </h4></a>
@@ -409,9 +424,11 @@
             </div> 
           </div>
           <div class="sub-news flex">
-            <div class="img-wrapper">            
+            <div class="img-wrapper">   
+              <div class="triangle">
+                <p class="discount">87% OFF</p>
+              </div>             
               <img src="images/deals-8.jpg" alt="Familio">
-              <p class="discount">87% OFF</p>
             </div>
             <div class="wrapper flex">
               <a href="#"><h4>Familio Private Backup Platform: Lifetime Subscription</h4></a>
