--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="wrapper">
       <section class="latest flex">
         <div class="latest-heading flex">
-          <h2>Latest funding rounds on Index.co  	&gt;</h2>
+          <a href="#"><h2>Latest funding rounds on Index.co  	&gt;</h2></a>
           <ul class="flex">
             <li><a href="#">Add info</a></li>
             <li id="updates" ><a href="#">Get updates by email</a></li>
@@ -93,7 +93,7 @@
         <div class="boxes">
           <div class="box">
             <div class="top-box">
-              <img src="images/funding-1.png" alt="Ringover">
+              <a href="#"><img src="images/funding-1.png" alt="Ringover"></a>
               <a href="#"><h4>Ringover</h4></a>
               <a href="#"><p class="value">$12M</p></a>
               <a href="#"><p class="series">SERIES A</p></a>
@@ -108,7 +108,7 @@
           </div>
           <div class="box">
             <div class="top-box">
-              <img src="images/funding-2.jpeg" alt="SwissDeCode">
+              <a href="#"><img src="images/funding-2.jpeg" alt="SwissDeCode"></a>
               <a href="#"><h4>SwissDeCode</h4></a>
               <a href="#"><p class="value">$4.2M</p></a>
               <a href="#"><p class="series">VENTURE CAPITAL</p></a>
@@ -123,7 +123,7 @@
           </div>
           <div class="box" id="third-box">
             <div class="top-box">
-              <img src="images/funding-3.jpeg" alt="Klook">
+              <a href="#"><img src="images/funding-3.jpeg" alt="Klook"></a>
               <a href="#"><h4>Klook</h4></a>
               <a href="#"><p class="value">$200M</p></a>
               <a href="#"><p class="series">SERIES E</p></a>
@@ -138,7 +138,7 @@
           </div>
           <div class="box" id="fourth-box">
             <div class="top-box">
-              <img src="images/funding-4.jpeg" alt="Wolt">
+              <a href="#"><img src="images/funding-4.jpeg" alt="Wolt"></a>
               <a href="#"><h4>Wolt</h4></a>
               <a href="#"><p class="value">$530M</p></a>
               <a href="#"><p class="series">VENTURE CAPITAL</p></a>
@@ -155,7 +155,7 @@
       </section>
       <section class="categories flex">
         <div class="category flex">
-          <h2>Hard Fork  &gt;</h2>
+          <a href="#"><h2>Hard Fork  &gt;</h2></a>
           <div class="top-category flex bg-1">
             <p>MOST POPULAR</p>
             <a class="hover-underline" href="#"><h3>GameStop stocks hit record high - thanks to Redditors</h3></a>
@@ -165,7 +165,7 @@
             </ul>
           </div>
           <div class="center-category">
-            <img src="images/sub-categories-1.jpg" alt="Jack Ma - Founder of ALi Baba">
+            <a href="#"><img src="images/sub-categories-1.jpg" alt="Jack Ma - Founder of ALi Baba"></a>
             <p>LATEST</p>
             <a href="#"><h5>Alibaba shares jump 8% as Jack Ma surfaces after 3 months</h5></a>
           </div>
@@ -178,7 +178,7 @@
           </ul>
         </div>
         <div class="category flex" id="second-category">
-          <h2>Apps  &gt;</h2>
+          <a href="#"><h2>Apps  &gt;</h2></a>
           <div class="top-category flex bg-2">
             <p>MOST POPULAR</p>
             <a class="hover-underline" href="#"><h3>Google Maps is adding COVID19 vaccine sites</h3></a>
@@ -188,7 +188,7 @@
             </ul>
           </div>
           <div class="center-category">
-            <img src="images/sub-categories-2.png" alt="Bernie sitting meme ">
+            <a href="#"><img src="images/sub-categories-2.png" alt="Bernie sitting meme "></a>
             <p>LATEST</p>
             <a href="#"><h5>Help kill the 'Bernie sitting' meme with this easy-to-use image generator</h5></a>
           </div>
@@ -201,7 +201,7 @@
           </ul>
         </div>
         <div class="category flex" id="third-category">
-          <h2>Gear  &gt;</h2>
+          <a href="#"><h2>Gear  &gt;</h2></a>
           <div class="top-category flex bg-3">
             <p>MOST POPULAR</p>
             <a class="hover-underline" href="#"><h3>Report: Apple may bring MagSafe and SD card slots back to MacBook</h3></a>
@@ -211,7 +211,7 @@
             </ul>
           </div>
           <div class="center-category">
-            <img src="images/sub-categories-3.jpg" alt="Apple">
+            <a href="#"><img src="images/sub-categories-3.jpg" alt="Apple"></a>
             <p>LATEST</p>
             <a href="#"><h5>Report: Apple to make a plain old VR headset before its fancy AR glasses</h5></a>
           </div>
@@ -225,10 +225,10 @@
         </div>
       </section>
       <section class="news flex">
-        <h2>Latest news  &gt;</h2>
+        <a href="#"><h2>Latest news  &gt;</h2></a>
         <div class="grid-container">
           <div class="sub-news flex">
-            <img src="images/news-1.png" alt="Golden gate bridge">
+            <a href="#"><img src="images/news-1.png" alt="Golden gate bridge"></a>
             <div class="wrapper flex">
               <a href="#"><h4>Want to drive a hydrogen EV in the US? Move to California </h4></a>
               <ul class="flex">
@@ -238,7 +238,7 @@
             </div>
           </div>
           <div class="sub-news flex">
-            <img src="images/news-2.png" alt="Golden gate bridge">
+            <a href="#"><img src="images/news-2.png" alt="Golden gate bridge"></a>
             <div class="wrapper flex">
               <a href="#"><h4>Help kill the ‘Bernie sitting’ meme with this easy-to-use image generator  </h4></a>
               <ul class="flex">
@@ -246,10 +246,9 @@
                 <li> 	&bull; 3 hours ago</li>
               </ul>
             </div>  
-            
           </div>
           <div class="sub-news flex">
-            <img src="images/news-3.png" alt="Golden gate bridge">
+            <a href="#"><img src="images/news-3.png" alt="Golden gate bridge"></a>
             <div class="wrapper flex">
               <a href="#"><h4>Uber expands its low-emission ride options to 1,400 more North American cities</h4></a>
             <ul class="flex">
@@ -259,7 +258,7 @@
             </div>  
           </div>
           <div class="sub-news flex">
-            <img src="images/news-4.png" alt="Golden gate bridge">
+            <a href="#"><img src="images/news-4.png" alt="Golden gate bridge"></a>
             <div class="wrapper flex">
               <a href="#"><h4>3 reasons why almost every VC investor passed on Zoom </h4></a>
               <ul class="flex">
@@ -269,7 +268,7 @@
             </div> 
           </div>
           <div class="sub-news flex">
-            <img src="images/news-5.png" alt="Golden gate bridge">
+            <a href="#"><img src="images/news-5.png" alt="Golden gate bridge"></a>
             <div class="wrapper flex">
               <a href="#"><h4>It’s happening! World’s biggest diesel factory pivots to electric motors </h4></a>
               <ul class="flex">
@@ -279,7 +278,7 @@
             </div> 
           </div>
           <div class="sub-news flex">
-            <img src="images/news-6.png" alt="Golden gate bridge">
+            <a href="#"><img src="images/news-6.png" alt="Golden gate bridge"></a>
             <div class="wrapper flex">
               <a href="#"><h4>This nearly inexplicable exoplanet has the density of cotton candy</h4></a>
               <ul class="flex">
@@ -289,7 +288,7 @@
             </div> 
           </div>
           <div class="sub-news flex">
-            <img src="images/news-7.png" alt="Golden gate bridge">
+            <a href="#"><img src="images/news-7.png" alt="Golden gate bridge"></a>
             <div class="wrapper flex">
               <a href="#"><h4>The future of US government vehicles is electric </h4></a>
               <ul class="flex">
@@ -299,7 +298,7 @@
             </div> 
           </div>
           <div class="sub-news flex">
-            <img src="images/news-8.png" alt="Golden gate bridge">
+            <a href="#"><img src="images/news-8.png" alt="Golden gate bridge"></a>
             <div class="wrapper flex">
               <a href="#"><h4>Signal is drama-free for now, but it should prepare for the worst </h4></a>
               <ul class="flex">
@@ -313,17 +312,16 @@
       </section>
       <section class="news deals flex">
         <div class="flex latest-heading">
-          <h2>Latest deals  &gt;</h2>
-          <p>See all Deals</p>
+          <a href="#"><h2>Latest deals  &gt;</h2></a>
+          <a href="#"><p>See all Deals</p></a>
         </div>
         <div class="grid-container">
           <div class="sub-news flex">
             <div class="img-wrapper">
               <div class="triangle">
-                <p class="discount">97% OFF</p>
+                <a href="#"><p class="discount">97% OFF</p></a>
               </div>
-              <img src="images/deals-1.jpg" alt="Glasses">
-              
+              <a href="#"><img src="images/deals-1.jpg" alt="Glasses"></a>
             </div>
             <div class="wrapper flex">
               <a href="#"><h4>The Ultimate 2021 White Hat Hacker Certification Bundle</h4></a>
@@ -336,9 +334,9 @@
           <div class="sub-news flex">
             <div class="img-wrapper"> 
               <div class="triangle">
-                <p class="discount">99% OFF</p>
+                <a href="#"><p class="discount">99% OFF</p></a>
               </div>           
-              <img src="images/deals-2.jpg" alt="Premium Bundle">
+              <a href="#"><img src="images/deals-2.jpg" alt="Premium Bundle"></a>
             </div>
             <div class="wrapper flex">
               <a href="#"><h4>The Premium 2021 Project & Quality Management Certification Bundle </h4></a>
@@ -351,9 +349,9 @@
           <div class="sub-news flex">
             <div class="img-wrapper">
               <div class="triangle">
-                <p class="discount">99% OFF</p>
+                <a href="#"><p class="discount">99% OFF</p></a>
               </div>       
-              <img src="images/deals-3.jpg" alt="Pro Google SEO">
+              <a href="#"><img src="images/deals-3.jpg" alt="Pro Google SEO"></a>
             </div>
             <div class="wrapper flex">
               <a href="#"><h4>The Pro Google SEO & SERP Certification Bundle</h4></a>
@@ -366,9 +364,9 @@
           <div class="sub-news flex">
             <div class="img-wrapper">  
               <div class="triangle">
-                <p class="discount">98% OFF</p>
+                <a href="#"><p class="discount">98% OFF</p></a>
               </div>              
-              <img src="images/deals-4.jpg" alt="Microsoft Azure">
+              <a href="#"><img src="images/deals-4.jpg" alt="Microsoft Azure"></a>
             </div>
             <div class="wrapper flex">
               <a href="#"><h4>The Complete 2021 Microsoft Azure Certification Prep Bundle</h4></a>
@@ -381,9 +379,9 @@
           <div class="sub-news flex">
             <div class="img-wrapper"> 
               <div class="triangle">
-                <p class="discount">80% OFF</p>
+                <a href="#"><p class="discount">80% OFF</p></a>
               </div>               
-              <img src="images/deals-5.jpg" alt="IPVanish">
+              <a href="#"><img src="images/deals-5.jpg" alt="IPVanish"></a>
             </div>
             <div class="wrapper flex">
               <a href="#"><h4>IPVanish VPN: 1-Yr Subscription</h4></a>
@@ -396,9 +394,9 @@
           <div class="sub-news flex">
             <div class="img-wrapper">     
               <div class="triangle">
-                <p class="discount">96% OFF</p>
+                <a href="#"><p class="discount">96% OFF</p></a>
               </div>           
-              <img src="images/deals-6.jpg" alt="X Music">
+              <a href="#"><img src="images/deals-6.jpg" alt="X Music"></a>
             </div>
             <div class="wrapper flex">
               <a href="#"><h4>The Ultimate Logic Pro X Music Production Bundle</h4></a>
@@ -411,9 +409,9 @@
           <div class="sub-news flex">
             <div class="img-wrapper"> 
               <div class="triangle">
-                <p class="discount">97% OFF</p>
+                <a href="#"><p class="discount">97% OFF</p></a>
               </div>               
-              <img src="images/deals-7.jpg" alt="Azure certification">
+              <a href="#"><img src="images/deals-7.jpg" alt="Azure certification"></a>
             </div>
             <div class="wrapper flex">
               <a href="#"><h4>The 2021 Complete Microsoft Azure Certification Prep Bundle </h4></a>
@@ -426,9 +424,9 @@
           <div class="sub-news flex">
             <div class="img-wrapper">   
               <div class="triangle">
-                <p class="discount">87% OFF</p>
+                <a href="#"><p class="discount">87% OFF</p></a>
               </div>             
-              <img src="images/deals-8.jpg" alt="Familio">
+              <a href="#"><img src="images/deals-8.jpg" alt="Familio"></a>
             </div>
             <div class="wrapper flex">
               <a href="#"><h4>Familio Private Backup Platform: Lifetime Subscription</h4></a>
